fix scrolling on ios

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,9 +10,10 @@
   bottom: 0;
   left: 0;
   right: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
-h1.app-name {
+.app-name {
   margin-left: 8px;
 }
 
@@ -23,6 +24,7 @@ h1.app-name {
 }
 
 .app-content {
+  min-height: 100vh;
   padding-top: 5px;
   padding-left: 20vw;
   padding-right: 20vw;
